# RandomTelecomPayments

./: Dockerfile  README.md  exeDocker.cmd  pyproject.toml  requirements.txt
.github/workflows/: deploy-main-push.yml  dev-pull-requests.yml
aws/: exeRunEC2.cmd
config/conda/: RandomTelecomPayments.cmd
config/uv/: RandomTelecomPayments.cmd
data/ref/: llama_first_names.csv  llama_last_names.csv
data/unittest/: transaction_data.parquet  user_data.parquet
doc/: RandomTelecomPayments.postman_collection.json
generator/: api.py  cons.py  exeApi.cmd  exeApi.sh  exeGenNames.cmd  exeMain.cmd  exeMain.sh  exeUnittests.cmd  exeUnittests.sh  main.py
generator/app/: ProgrammeParams.py  gen_random_telecom_data.py  gen_trans_data.py  gen_user_data.py
generator/batch/: gen_bedrock_data.py  gen_user_names_file.py
generator/objects/: Application.py  Card.py  Device.py  Ip.py  Transaction.py  User.py
generator/unittests/app/: test_gen_user_trans_data.py
generator/unittests/objects/: test_Application.py  test_Card.py  (+3 more)
generator/utilities/: Bedrock.py  JsonEncoder.py  align_country_codes.py  cnt2prop_dict.py  commandline_interface.py  gen_country_codes_dict.py  gen_country_codes_map.py  gen_dates_dict.py  gen_idhash_cnt_dict.py  gen_obj_idhash_series.py  gen_random_entity_counts.py  gen_random_hash.py  gen_random_id.py  gen_random_poisson_power.py  gen_shared_idhashes.py  gen_trans_rejection_rates.py  gen_trans_status.py  gen_user_names_file.py  input_error_handling.py  join_idhashes_dict.py  multiprocess.py  remove_duplicate_idhashes.py  round_trans_amount.py
(+8 files in other folders)
