[project]
name = "randomtelecompayments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype==0.19.0",
    "boto3==1.36.12",
    "fastapi[standard]==0.128.0",
    "fastparquet==2024.11.0",
    "ipykernel==6.29.5",
    "networkx==3.4.2",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "shap==0.46.0",
    "unidecode==1.3.8",
]
